--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
            時脈/正反器<br/>Clock/Flip-Flop
           </div>
           <div class="course_logicdiagram">
-            <a href="" class="course__link" target="_blank">
+            <a href="https://youtube.com/playlist?list=PLpZi1Q0TuudvPudoI2Bl-b2g-sgP_re1H" class="course__link" target="_blank">
               <img src="images/clock.png" alt="" class="course__image">
               <p class="color_tea"></p>
             </a>
