更新全減器影片

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
            全減器<br/>Full Reducer
           </div>
           <div class="course_logicdiagram">
-            <a href="" class="course__link" target="_blank">
+            <a href="https://youtu.be/XJCpkUIRE90" class="course__link" target="_blank">
               <img src="images/fullreducer.png" alt="" class="course__image">
               <p class="color_carrot"></p>
             </a>
