body background color

--- a/index.html
+++ b/index.html
@@ -66,25 +66,24 @@
       <h1>課程影片</h1>
       <hr class="divider--light">
       <!-- <div class="row" style="display: flex; flex-wrap: wrap;"> -->
-        <div class="row course_layout">
+      <div class="row course_layout">
         <div class="mt-4 col-md-4 col-sm-6 course_cell">
           <div class="course_title color_bud">
-           全加器<br/>Full Adder
+            全加器<br />Full Adder
           </div>
           <div class="course_logicdiagram">
-            <a href="https://youtu.be/WzfK1mW3ZE4" class="course__link"target="_blank">
+            <a href="https://youtu.be/WzfK1mW3ZE4" class="course__link" target="_blank">
               <img src="images/fulladder.png" alt="" class="course__image">
               <p class="color_bud"></p>
             </a>
           </div>
-
         </div>
         <div class="mt-4 col-md-4 col-sm-6 course_cell">
           <div class="course_title color_tea">
-           七段顯示器<br/>Seven Segment Display
+            七段顯示器<br />Seven Segment Display
           </div>
           <div class="course_logicdiagram">
-            <a href="https://youtu.be/e8KBW_GqkpI" class="course__link"target="_blank">
+            <a href="https://youtu.be/e8KBW_GqkpI" class="course__link" target="_blank">
               <img src="images/seven_segment.png" alt="" class="course__image">
               <p class="color_tea"></p>
             </a>
@@ -93,7 +92,7 @@
         </div>
         <div class="mt-4 col-md-4 col-sm-6 course_cell">
           <div class="course_title color_carrot">
-           全減器<br/>Full Reducer
+            全減器<br />Full Reducer
           </div>
           <div class="course_logicdiagram">
             <a href="https://youtu.be/XJCpkUIRE90" class="course__link" target="_blank">
@@ -105,10 +104,11 @@
         </div>
         <div class="mt-4 col-md-4 col-sm-6 course_cell">
           <div class="course_title color_tea">
-           時脈/正反器<br/>Clock/Flip-Flop
+            時脈/正反器<br />Clock/Flip-Flop
           </div>
           <div class="course_logicdiagram">
-            <a href="https://youtube.com/playlist?list=PLpZi1Q0TuudvPudoI2Bl-b2g-sgP_re1H" class="course__link" target="_blank">
+            <a href="https://youtube.com/playlist?list=PLpZi1Q0TuudvPudoI2Bl-b2g-sgP_re1H" class="course__link"
+              target="_blank">
               <img src="images/clock.png" alt="" class="course__image">
               <p class="color_tea"></p>
             </a>
@@ -117,7 +117,7 @@
         </div>
         <div class="mt-4 col-md-4 col-sm-6 course_cell">
           <div class="course_title color_bud">
-            十進上數漣波計數器<br/>Decimal Ripple Counter
+            十進上數漣波計數器<br />Decimal Ripple Counter
           </div>
           <div class="course_logicdiagram">
             <a href="" class="course__link" target="_blank">
@@ -129,7 +129,7 @@
         </div>
         <div class="mt-4 col-md-4 col-sm-6 course_cell">
           <div class="course_title color_tea">
-           順序加法器<br/>Sequential Adder
+            順序加法器<br />Sequential Adder
           </div>
           <div class="course_logicdiagram">
             <a href="" class="course__link" target="_blank">
@@ -141,7 +141,7 @@
         </div>
         <div class="mt-4 col-md-4 col-sm-6 course_cell">
           <div class="course_title color_carrot">
-           八進上數漣波計數器<br/>Octal Ripple Counter
+            八進上數漣波計數器<br />Octal Ripple Counter
           </div>
           <div class="course_logicdiagram">
             <a href="" class="course__link" target="_blank">
@@ -179,9 +179,12 @@
           </div>
 
           <ul class="footer__list col-md-4">
-            <li class="footer__item"><a href="https://www.facebook.com/chisamyu" class="footer__link"><i class="fab fa-facebook-f"></i></a></li>
-            <li class="footer__item"><a href="https://plus.google.com/u/0/+ChiShanYu/posts" class="footer__link"><i class="fab fa-google-plus-g"></i></a></li>
-            <li class="footer__item"><a href="https://tw.linkedin.com/pub/chi-shan-yu/103/235/a61" class="footer__link"><i class="fab fa-linkedin-in"></i></a></li>
+            <li class="footer__item"><a href="https://www.facebook.com/chisamyu" class="footer__link"><i
+                  class="fab fa-facebook-f"></i></a></li>
+            <li class="footer__item"><a href="https://plus.google.com/u/0/+ChiShanYu/posts" class="footer__link"><i
+                  class="fab fa-google-plus-g"></i></a></li>
+            <li class="footer__item"><a href="https://tw.linkedin.com/pub/chi-shan-yu/103/235/a61"
+                class="footer__link"><i class="fab fa-linkedin-in"></i></a></li>
           </ul>
         </div><!-- footer__above-layout -->
       </div><!-- container -->
