feat:更新影片連結＋準備修改架構

--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
     <div class="container d-flex flex-column align-items-center">
       <h1>課程影片</h1>
       <hr class="divider--light">
-      <!-- <div class="row" style="display: flex; flex-wrap: wrap;"> -->
       <div class="row course_layout">
         <div class="mt-4 col-md-4 col-sm-6 course_cell">
           <div class="course_title color_bud">
@@ -109,7 +108,7 @@
           <div class="course_logicdiagram">
             <a href="https://youtube.com/playlist?list=PLpZi1Q0TuudvPudoI2Bl-b2g-sgP_re1H" class="course__link"
               target="_blank">
-              <img src="images/clock.png" alt="" class="course__image">
+              <img src="images/clockandffs.png" alt="" class="course__image">
               <p class="color_tea"></p>
             </a>
           </div>
@@ -117,24 +116,34 @@
         </div>
         <div class="mt-4 col-md-4 col-sm-6 course_cell">
           <div class="course_title color_bud">
-            十進上數漣波計數器<br />Decimal Ripple Counter
+            十六進上數漣波計數器<br />Hexadecimal Ripple Counter
           </div>
           <div class="course_logicdiagram">
-            <a href="" class="course__link" target="_blank">
-              <img src="images/decimal_ripple_counter.png" alt="" class="course__image">
+            <a href="https://youtu.be/1SCWbI19K1E" class="course__link" target="_blank">
+              <img src="images/hexadecimal_ripple_counter.png" alt="" class="course__image">
               <p class="color_bud"></p>
             </a>
           </div>
-
         </div>
         <div class="mt-4 col-md-4 col-sm-6 course_cell">
           <div class="course_title color_tea">
+            十進上數漣波計數器<br />Decimal Ripple Counter
+          </div>
+          <div class="course_logicdiagram">
+            <a href="https://youtu.be/7THQth0oQQI" class="course__link" target="_blank">
+              <img src="images/decimal_ripple_counter.png" alt="" class="course__image">
+              <p class="color_tea"></p>
+            </a>
+          </div>
+        </div>
+        <div class="mt-4 col-md-4 col-sm-6 course_cell">
+          <div class="course_title  color_bud">
             順序加法器<br />Sequential Adder
           </div>
           <div class="course_logicdiagram">
             <a href="" class="course__link" target="_blank">
               <img src="images/sequentialadder.png" alt="" class="course__image">
-              <p class="color_tea"></p>
+              <p class="color_bud"></p>
             </a>
           </div>
 
@@ -144,7 +153,7 @@
             八進上數漣波計數器<br />Octal Ripple Counter
           </div>
           <div class="course_logicdiagram">
-            <a href="" class="course__link" target="_blank">
+            <a href="https://youtu.be/dIR81fGV2DM" class="course__link" target="_blank">
               <img src="images/octal_ripple_counter.png" alt="" class="course__image">
               <p class="color_carrot"></p>
             </a>
@@ -152,19 +161,6 @@
 
         </div>
       </div>
-      <!-- <p class="text-justify resume__description py-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Accusantium laborum
-        corrupti ut iure aliquam. Quod, perferendis. Libero tempore iste, animi sint numquam illum quasi laboriosam
-        unde pariatur quidem! Suscipit consequatur nihil dolor impedit temporibus ad cum, voluptatum odit ratione
-        ullam
-        eligendi amet beatae aliquid eaque nesciunt optio nobis ducimus itaque. Voluptatibus aspernatur assumenda
-        quod
-        quo error consequuntur, vero iusto reprehenderit repellat maiores, sapiente dolores voluptates minima. Alias
-        dolore assumenda fuga quae repellat voluptatum quo, saepe exercitationem perspiciatis reiciendis modi
-        tempora.
-        Recusandae explicabo iusto corporis nam numquam dignissimos, necessitatibus, iure non culpa repellat
-        repudiandae temporibus! Saepe excepturi tempore iusto eos sit!</p>
-      <div class="btn btn--lg align-self-center">進一步了解</div> -->
     </div><!-- container -->
   </article><!-- resume -->
 
@@ -200,7 +196,8 @@
   </footer>
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script src="js/custom.js"></script>
+  <script src="js/scroll.js"></script>
+  <!-- <script src="js/func.js"></script> -->
 </body>
 
 </html>
