--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-
   <nav class="navbar fixed-top navbar-expand-md navbar-dark nav__bg">
     <div class="container">
       <a class="navbar-brand nav__brand" href="https://dtd.ntue.edu.tw/chsyu/">回首頁去！</a>
@@ -28,7 +27,7 @@
             <a class="nav-link" href="#course">課程簡介</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#resume">課程影片</a>
+            <a class="nav-link" href="#resume">課程內容</a>
           </li>
         </ul>
       </div>
@@ -63,10 +62,11 @@
 
   <article class="resume" id="resume">
     <div class="container d-flex flex-column align-items-center">
-      <h1>課程影片</h1>
+      <h1>課程內容</h1>
       <hr class="divider--light">
       <div class="row course_layout">
-        <div class="mt-4 col-md-4 col-sm-6 course_cell">
+        <!-- course start -->
+        <!-- <div class="mt-4 col-md-4 col-sm-6 course_cell">
           <div class="course_title color_bud">
             全加器<br />Full Adder
           </div>
@@ -158,8 +158,8 @@
               <p class="color_carrot"></p>
             </a>
           </div>
-
-        </div>
+        </div> -->
+        <!-- course end -->
       </div>
     </div><!-- container -->
   </article><!-- resume -->
@@ -197,7 +197,7 @@
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/scroll.js"></script>
-  <!-- <script src="js/func.js"></script> -->
+  <script src="js/index.js"></script>
 </body>
 
 </html>
