update:更新detailu頁面css與邏輯圖更新名稱

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <h1 class="text-center">簡介</h1>
       <hr class="divider--dark">
       <div class="row" style="justify-content: center;">
-        <div class="col-lg-12 col-lg-offset-2">
+        <div class="col-lg-12 col-lg-offset-2 text-justify">
           <p>
             &emsp;&emsp;本門課程針對初學者學習硬實作而設計，是踏入互動裝置實作的入門課程，本課程為操作部分。
           </p>
@@ -189,7 +189,7 @@
     <div class="footer__below">
       <div class="container">
         <h6>
-          &copy; Copyright All rights reserved.
+          製作：陳鈺文、沈桓民 &copy; Copyright All rights reserved.
         </h6>
       </div><!-- container -->
     </div><!-- footer__below -->
