--- a/detail.html
+++ b/detail.html
@@ -16,45 +16,9 @@
   <nav class="navbar fixed-top navbar-expand-md navbar-dark nav__bg">
     <div class="container">
       <a class="navbar-brand nav__brand" href="index.html#resume">回前頁</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <!-- <a class="nav-link" href="#course">課程簡介</a> -->
-          </li>
-          <li class="nav-item">
-            <!-- <a class="nav-link" href="#resume">課程內容</a> -->
-          </li>
-        </ul>
-      </div>
     </div>
   </nav>
-
-  <!-- <header class="header">
-    <div class="container d-flex flex-column align-items-center">
-      <h1 class="header__title2 text-center">數位邏輯設計實驗</h1>
-      <hr class="divider--light">
-      <p class="header__slogan2">Bread Board／ICs／Arduino</p>
-    </div>
-  </header> -->
-
   <article class="detail"></article>
-
-  
-
-  <!-- <article class="resume" id="resume">
-    <div class="container d-flex flex-column align-items-center">
-      <h1>課程內容</h1>
-      <hr class="divider--light">
-      <div class="row course_layout">
-      </div>
-    </div>
-  </article> -->
-
   <footer class="footer">
     <div class="footer__above py-5">
       <div class="container">
@@ -80,7 +44,7 @@
     <div class="footer__below">
       <div class="container">
         <h6>
-          &copy; Copyright All rights reserved.
+          製作：陳鈺文、沈桓民 &copy; Copyright All rights reserved.
         </h6>
       </div><!-- container -->
     </div><!-- footer__below -->
