docs: add comment & README.md update

--- a/detail.html
+++ b/detail.html
@@ -13,12 +13,18 @@
 </head>
 
 <body>
+  <!-- navigation bar -->
   <nav class="navbar fixed-top navbar-expand-md navbar-dark nav__bg">
     <div class="container">
       <a class="navbar-brand nav__brand" href="index.html#resume">回前頁</a>
     </div>
   </nav>
+
+  <!-- course detail dynamic create -->
   <article class="detail"></article>
+
+  <!-- footer -->
+  <!-- footer__above -->
   <footer class="footer">
     <div class="footer__above py-5">
       <div class="container">
@@ -37,21 +43,26 @@
             <li class="footer__item"><a href="https://tw.linkedin.com/pub/chi-shan-yu/103/235/a61"
                 class="footer__link"><i class="fab fa-linkedin-in"></i></a></li>
           </ul>
-        </div><!-- footer__above-layout -->
-      </div><!-- container -->
-    </div><!-- footer__above -->
-
+        </div>
+      </div>
+    </div>
+    <!-- footer__below -->
     <div class="footer__below">
       <div class="container">
         <h6>
-          製作：陳鈺文、沈桓民 &copy; Copyright All rights reserved.
+          本課程網頁由 陳鈺文、沈桓民 製作 &copy; Copyright All rights reserved.
         </h6>
-      </div><!-- container -->
-    </div><!-- footer__below -->
+      </div>
+    </div>
   </footer>
+
+  <!-- jquery  -->
   <script src="js/jquery.min.js"></script>
+  <!-- bootstrap js -->
   <script src="js/bootstrap.min.js"></script>
+  <!-- nav animation -->
   <script src="js/scroll.js"></script>
+  <!-- course detail dynamic creation-->
   <script src="js/detail.js"></script>
 </body>
 
