feat: update state machine

--- a/index.html
+++ b/index.html
@@ -138,12 +138,24 @@
         </div>
         <div class="mt-4 col-md-4 col-sm-6 course_cell">
           <div class="course_title  color_bud">
+            狀態機<br />State Machine
+          </div>
+          <div class="course_logicdiagram">
+            <a href="" class="course__link" target="_blank">
+              <img src="images/statemachine.png" alt="" class="course__image">
+              <p class="color_bud"></p>
+            </a>
+          </div>
+
+        </div>
+        <div class="mt-4 col-md-4 col-sm-6 course_cell">
+          <div class="course_title  color_tea">
             順序加法器<br />Sequential Adder
           </div>
           <div class="course_logicdiagram">
             <a href="" class="course__link" target="_blank">
               <img src="images/sequentialadder.png" alt="" class="course__image">
-              <p class="color_bud"></p>
+              <p class="color_tea"></p>
             </a>
           </div>
 
