feat:add state machine &debug synchronous counter

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             狀態機<br />State Machine
           </div>
           <div class="course_logicdiagram">
-            <a href="" class="course__link" target="_blank">
+            <a href="https://youtu.be/Y7Fm5O0hSjg" class="course__link" target="_blank">
               <img src="images/statemachine.png" alt="" class="course__image">
               <p class="color_bud"></p>
             </a>
@@ -162,7 +162,7 @@
         </div>
         <div class="mt-4 col-md-4 col-sm-6 course_cell">
           <div class="course_title color_carrot">
-            八進上數漣波計數器<br />Octal Ripple Counter
+            八進上數同步計數器<br />Octal Synchronous Counter
           </div>
           <div class="course_logicdiagram">
             <a href="https://youtu.be/dIR81fGV2DM" class="course__link" target="_blank">
