feat:add sequential adder url

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             順序加法器<br />Sequential Adder
           </div>
           <div class="course_logicdiagram">
-            <a href="" class="course__link" target="_blank">
+            <a href="https://youtu.be/FpY6VqKJCaY" class="course__link" target="_blank">
               <img src="images/sequentialadder.png" alt="" class="course__image">
               <p class="color_tea"></p>
             </a>
