--- a/detail.html
+++ b/detail.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="detailBody">
   <!-- navigation bar -->
   <nav class="navbar fixed-top navbar-expand-md navbar-dark nav__bg">
     <div class="container">
