feat: add spinner

--- a/detail.html
+++ b/detail.html
@@ -21,7 +21,11 @@
   </nav>
 
   <!-- course detail dynamic create -->
-  <article class="detail"></article>
+  <article class="detail">
+    <div class="row loading justify-content-center">
+      <i class="fas fa-circle-notch fa-spin fa-3x"></i>
+    </div>
+  </article>
 
   <!-- footer -->
   <!-- footer__above -->
