--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
       <h1>課程內容</h1>
       <hr class="divider--light">
       <!-- course dynamic create start -->
+      <div class="row loading">
+          <i class="fas fa-circle-notch fa-spin fa-3x"></i>
+      </div>
       <div class="row course_layout"></div>
       <!-- course dynamic create end -->
     </div>
