--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
       </div>
     </div>
   </article>
-
+    
+ 
   <!-- course introduction -->
   <article class="resume" id="resume">
     <div class="container d-flex flex-column align-items-center">
@@ -77,7 +78,19 @@
       <!-- course dynamic create end -->
     </div>
   </article>
-
+  <article class="basic_use" id="basic_use">
+    <div class="container d-flex flex-column align-items-center">
+      <!-- <div class="cont"></div> -->
+      <h1>基本器材使用教學</h1>
+      <hr class="divider--dark">
+      <!-- course dynamic create start -->
+      <div class="row loading">
+          <i class="fas fa-circle-notch fa-spin fa-3x"></i>
+      </div>
+      <div class="row  basic_use_layout"></div>
+      <!-- course dynamic create end -->
+    </div>
+  </article>
   <!-- footer -->
   <!-- footer__above -->
   <footer class="footer">
